@@ -1,7 +1,0 @@
-^MANIFEST\.bak$
-Makefile(\.old)?$
-^Pod-Perldoc-\d
-\.rej$
-CVS
-blib
-~
